# SSM

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILDING.txt  OptaneCacheTestPlan.md  OptaneShuffleTestPlan.md  OptaneTestPlanInHadoop.md  README.md  SSDBenchmarkSchedule.md  SSM Performance Test Plan.md  codecov.yml  pom.xml  runSSMServer.sh
ErasureCodeBenchmarkThroughput/: PCIe SSD在HDFS中的性能测试报告.md  Test Report.docx
Meituan/ErasureCodeBenchmarkThroughput/: PCIe SSD在HDFS中的性能测试报告.md
Meituan/TestDFSIO/: PCIe SSD在HDFS中的性能测试报告.md
SSDBenchmark/benchmark/: OptaneBenchmarkAsCache.md
SSDBenchmark/plan/: CASOptaneTestPlan  CASOptaneTestPlan.md  OptaneTestPlanInHadoop.md
conf/: agents  druid.xml  hazelcast.xml  interpreter.json  log4j.properties  shiro.ini  smart-default.xml  smart-env.sh  smart-site.xml  zeppelin-site.xml
docs/: Enable S3 support in SSM.md  README.md  SSM API User Guide.md  SSM Admin API User Guide.md  Small File Solution.md  admin-user-guide.md  block-level-ec.md  client-user-guide.md  diaster-recovery.md  disaster-recovery.md  enable-kerberos.md  hdfs-ssm-design.md  overall-initiative.md  rest-api.md  s3-support.md  small-file-guide.md  small-file-solution.md  smart-server-HA.md  ssm-cdh5.10-deployment-guide.md  ssm-compression-guide.md  ssm-demo.md  ssm-deployment-guide-Chinese.md  ssm-deployment-guide.md  ssm-developer-guide.md  ssm-erasure-coding.md  support-new-action-guide.md  web-authentication-enable-guide.md
docs/config-template/: README.md
hadoop-smart-client/: pom.xml
hadoop-smart-project/: pom.xml
hadoop-smart-server/: pom.xml
hadoop-ssm-project/: pom.xml
patch/: Metrics_2.7.3.patch  RPC_2.7.3.patch
smart-action/: pom.xml
smart-actions/: pom.xml
smart-admin/: pom.xml
smart-agent/: pom.xml
smart-alluxio/: pom.xml
smart-alluxio-support/: pom.xml
smart-alluxio-support/smart-alluxio/: pom.xml
smart-alluxio-support/smart-alluxio-client/: pom.xml
smart-alluxio/smart-alluxio-bak/: pom.xml
smart-blockec/: README.md  SmartBlockec.cmake  pom.xml
smart-blockec/raid/: pom.xml
smart-blockec/src/: CMakeLists.txt  config.h.cmake
smart-client/: pom.xml
smart-common/: pom.xml
smart-dfsclient/: pom.xml
smart-dist/: pom.xml
smart-engine/: pom.xml
smart-erasurecode/: pom.xml
smart-erasurecode/smart-erasurecodec/: README.md  pom.xml
smart-erasurecode/smart-erasurecodec/src/: CMakeLists.txt
smart-erasurecode/smart-erasurecodec/src/main/java/org/smartdata/erasurecode/: ECBlock.java  ErasureCoderOptions.java
smart-erasurecode/smart-erasurecodec/src/main/java/org/smartdata/erasurecode/codec/: XORErasureCodec.java
smart-erasurecode/smart-erasurecodec/src/main/java/org/smartdata/erasurecode/coder/: ErasureCodingStep.java  HHErasureCodingStep.java  HHXORErasureEncoder.java  HHXORErasureEncodingStep.java
smart-erasurecode/smart-erasurecodec/src/main/java/org/smartdata/erasurecode/coder/util/: HHUtil.java
smart-erasurecode/smart-erasurecodec/src/main/java/org/smartdata/erasurecode/rawcoder/: ByteArrayEncodingState.java  ByteBufferDecodingState.java  EncodingState.java  NativeRSRawEncoder.java  RSRawDecoder.java  RSRawEncoderLegacy.java
smart-erasurecode/smart-erasurecodec/src/main/native/src/org/smartdata/erasurecode/: jni_erasure_code_native.c
smart-erasurecode/smart-erasurecodec/src/test/java/org/smartdata/erasurecode/: TestECSchema.java
smart-erasurecode/smart-erasurecodec/src/test/java/org/smartdata/erasurecode/coder/: TestHHErasureCoderBase.java
smart-erasurecode/smart-erasurecodec/src/test/java/org/smartdata/erasurecode/rawcoder/: TestCoderUtil.java  TestHHErasureCoderBase.java  TestNativeXORRawCoder.java  TestRSRawCoderBase.java  TestRawErasureCoderBenchmark.java
smart-erasurecode/smart-erasurecodec/src/test/java/org/smartdata/erasurecode/test/: GenericTestUtils.java  MetricsAsserts.java  TestMultithreadedTestUtil.java
smart-erasurecode/smart-maven-plugins/: README.md  (+1 more)
smart-hadoop/: pom.xml
smart-hadoop-support/: pom.xml
smart-hdfs/: pom.xml
smart-integration/: pom.xml
smart-interpreter/: pom.xml
smart-maven-plugins/: README.md  pom.xml
smart-metastore/: pom.xml
smart-metrics/: pom.xml
smart-rule/: pom.xml
smart-server/: pom.xml
smart-storage/: pom.xml
smart-tidb/: pom.xml
smart-web/: .angular-cli.json  .gitignore  README.md  angular.json  karma.conf.js  package.json  pom.xml  protractor.conf.js
smart-zeppelin/: pom.xml
supports/: How_TO_RUN.md  SSM_Example.md  init_HDFS.sh  integrate_test.py
untitled/: 1.txt
(+2655 files in other folders)
